--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,28 @@
     <string name="wizard_example_master">Master-%s</string>
     <string name="wizard_example_input_credit_wrong">Error: invalid credit card number</string>
     <string name="wizard_example_just_a_second">Just a second...</string>
+
+
+
+    <string name="description" translatable="false">Demo for Android TV Input Framework</string>
+    <string name="label" translatable="false">Leanback Showcase Input</string>
+    <string name="input_feed_url" translatable="false">http://commondatastorage.googleapis.com/android-tv/rich_tv_input_xmltv_feed.xml</string>
+    <string name="add_channel">Add Channels</string>
+    <string name="setup_cancel">Cancel Setup</string>
+    <string name="setup_in_progress">In Progress…</string>
+    <string name="feed_error_message">No feed. Check your connection!</string>
+    <string name="app_link_title_1" translatable="false">Open-source film</string>
+    <string name="app_link_title_2" translatable="false">Google IO</string>
+    <string name="details_fragment_subtitle" translatable="false">Channel For Open Source Film</string>
+    <string name="details_fragment_body" translatable="false">Open-source films (also known as open-content films and free-content films) are films which are produced and distributed by using free and open-source and open content methodologies</string>
+    <string name="details_fragment_learn_more" translatable="false">Learn More</string>
+    <string name="open_source_file_wiki_link" translatable="false">https://en.wikipedia.org/wiki/Open-source_film</string>
+    <string name="google_io_wiki_link" translatable="false">https://en.wikipedia.org/wiki/Google_I/O</string>
+    <string name="details_fragment_close" translatable="false">Close</string>
+    <string name="learn_more" translatable="false">Learn More</string>
+    <string name="close" translatable="false">Close</string>
+
+    <string name="sync_error_canceled">User canceled sync</string>
+    <string name="sync_error_no_data">No programs or channels found. Check your connection.</string>
+    <string name="sync_error_other">Error code %1$d</string>
 </resources>
